// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component with custom class matches snapshot 1`] = `
<input
  className="Input custom_class"
/>
`;

exports[`Input component with no props matches snapshot 1`] = `
<input
  className="Input"
/>
`;
